# irregular-parameter-sharing

./: .gitignore  README.md  pyproject.toml
docs/butterfly-sharing/: progress.md  spec.md
docs/hard-block-sharing/: progress.md  spec.md
docs/shared-basis-field/: progress.md  spec.md
docs/shared-basis-sharing/: progress.md  spec.md
scripts/: run_basis_5090.sh  run_basis_lm.py  run_butterfly_lm.py  run_hard_block_5090.sh  run_hard_block_lm.py  run_large_5090.sh  run_shared_basis_lm.py
src/irregular_parameter_sharing/: __init__.py  basis_lm.py  butterfly_lm.py  hard_block_lm.py  shared_basis_lm.py
tests/: test_shared_basis_lm.py
